WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280055
[Cocoa] voice activity detection does not work when changing of capturing device
https://bugs.webkit.org/show_bug.cgi?id=280055
Summary
[Cocoa] voice activity detection does not work when changing of capturing device
youenn fablet
Reported
2024-09-20 04:30:38 PDT
voice activity detection does not work when changing of capturing device
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-20 04:31:01 PDT
<
rdar://problem/136356108
>
EWS
Comment 2
2024-10-10 10:33:27 PDT
Committed
284979@main
(5dd3f262832b): <
https://commits.webkit.org/284979@main
> Reviewed commits have been landed. Closing PR #34908 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug