Source/WebCore/platform/mediastream/mac/CoreAudioSharedUnit.cpp
@@ -230,7 +230,7 @@ CoreAudioSharedUnit::CoreAudioSharedUnit()
 
 CoreAudioSharedUnit::~CoreAudioSharedUnit()
 {
-    updateVoiceActiveDetection();
+    updateVoiceActivityDetection();
     setMuteStatusChangedCallback({ });
 }
 
@@ -265,6 +265,7 @@ void CoreAudioSharedUnit::captureDeviceChanged()
 #else
     AVAudioSessionCaptureDeviceManager::singleton().setPreferredAudioSessionDeviceUID(persistentID());
 #endif
+    updateVoiceActivityDetection();
 }
 
 size_t CoreAudioSharedUnit::preferredIOBufferSize()
@@ -565,7 +566,7 @@ void CoreAudioSharedUnit::cleanupAudioUnit()
         m_ioUnitInitialized = false;
     }
 
-    updateVoiceActiveDetection();
+    updateVoiceActivityDetection();
     m_ioUnit = nullptr;
 
     m_microphoneSampleBuffer = nullptr;
@@ -651,7 +652,7 @@ OSStatus CoreAudioSharedUnit::startInternal()
     m_microphoneProcsCalled = 0;
     m_microphoneProcsCalledLastTime = 0;
 
-    updateVoiceActiveDetection();
+    updateVoiceActivityDetection();
     updateMutedState();
 
     return noErr;
@@ -660,7 +661,7 @@ OSStatus CoreAudioSharedUnit::startInternal()
 void CoreAudioSharedUnit::isProducingMicrophoneSamplesChanged()
 {
     updateMutedState();
-    updateVoiceActiveDetection();
+    updateVoiceActivityDetection();
 
     if (!isProducingData())
         return;
@@ -778,7 +779,7 @@ void CoreAudioSharedUnit::stopInternal()
 #if PLATFORM(IOS_FAMILY)
     setIsInBackground(false);
 #endif
-    updateVoiceActiveDetection();
+    updateVoiceActivityDetection();
 }
 
 void CoreAudioSharedUnit::registerSpeakerSamplesProducer(CoreAudioSpeakerSamplesProducer& producer)
@@ -823,13 +824,13 @@ bool CoreAudioSharedUnit::shouldEnableVoiceActivityDetection() const
         && m_ioUnitStarted;
 }
 
-void CoreAudioSharedUnit::updateVoiceActiveDetection()
+void CoreAudioSharedUnit::updateVoiceActivityDetection(bool shouldDisableVoiceActivityDetection)
 {
     if (!m_ioUnit)
         return;
 
     if (m_voiceActivityDetectionEnabled) {
-        if (shouldEnableVoiceActivityDetection())
+        if (shouldEnableVoiceActivityDetection() && !shouldDisableVoiceActivityDetection)
             return;
         if (m_ioUnit->setVoiceActivityDetection(false))
             m_voiceActivityDetectionEnabled = false;
@@ -845,19 +846,28 @@ void CoreAudioSharedUnit::updateVoiceActiveDetection()
 void CoreAudioSharedUnit::enableMutedSpeechActivityEventListener(Function<void()>&& callback)
 {
     setVoiceActivityListenerCallback(WTFMove(callback));
-    updateVoiceActiveDetection();
+    updateVoiceActivityDetection();
 }
 
 void CoreAudioSharedUnit::disableMutedSpeechActivityEventListener()
 {
     setVoiceActivityListenerCallback({ });
-    updateVoiceActiveDetection();
+    updateVoiceActivityDetection();
 }
 
 void CoreAudioSharedUnit::handleMuteStatusChangedNotification(bool isMuting)
 {
     if (m_muteStatusChangedCallback && isMuting == isProducingMicrophoneSamples())
         m_muteStatusChangedCallback(isMuting);
+}
+
+void CoreAudioSharedUnit::willChangeCaptureDevice()
+{
+    if (!m_voiceActivityDetectionEnabled)
+        return;
+
+    bool shouldDisableVoiceActivityDetection = true;
+    updateVoiceActivityDetection(shouldDisableVoiceActivityDetection);
 }
 
 #if PLATFORM(IOS_FAMILY)
